<resources>
    <string name="app_name">ISTA Absense</string>
    <string name="app_version_name">Version 1.0-beta</string>
    <string name="loading_message">Chargement encours...</string>

    <string name="f_ts">Technicien Specialisé</string>
    <string name="f_t">Technicien</string>

    <string name="prem_anne">1er Ann\ée</string>
    <string name="deux_anne">2eme Ann\ée</string>

    <string name="slct_filiere">s\électionner une Fili\ére</string>
    <string name="slct_secteur">s\électionner un secteur</string>
    <string name="slct_groupes">s\électionner un groupe</string>
    <string name="slct_prof_name">s\électionner le nom du Prof</string>

    <string name="enter_filtrage">Entrer</string>
    <string name="school_timed_out_message">La periode des seances ont été termin\é. Veuillez r\éessayer demain matin.</string>

    <string name="db_import_title">Importer la Base</string>
    <string name="db_export_title">Exporter la base</string>

    <string name="menu_import_export">Importer/Exporter</string>
    <string name="menu_settings">Parametres</string>
    <string name="menu_about">\Á Propos</string>
    <string name="txt_last_imported">Derni\ére importation:</string>
    <string name="txt_db_source_path">Chemin de la base source:</string>
    <string name="btn_import_start">Importer la Base de donn\és</string>
</resources>
