<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdigroup.istaabsense.DBExportImportActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/relativeLayout">

        <belka.us.androidtoggleswitch.widgets.ToggleSwitch
            android:id="@+id/niveau_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            custom:activeBgColor="@android:color/holo_blue_dark"
            custom:activeTextColor="@android:color/white"
            custom:cornerRadius="8dp"
            custom:inactiveBgColor="#eaeaea"
            custom:inactiveTextColor="@android:color/black"
            custom:separatorColor="@color/gray_very_light"
            custom:textToggleLeft="@string/db_import_title"
            custom:textToggleRight="@string/db_export_title"
            custom:toggleWidth="200dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_importContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp"
            android:text="@string/txt_last_imported"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/txt_db_source_path"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_import_start" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/button"
            android:layout_marginTop="61dp"
            android:ems="10"
            android:gravity="top|left"
            android:padding="8dp"
            android:text="Log d\'importation\n"
            android:inputType="textMultiLine"
            android:enabled="false"/>
    </RelativeLayout>
</RelativeLayout>
