<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tdigroup.istaabsense.HomeFilterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center">

            <belka.us.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/niveau_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                custom:activeBgColor="@android:color/holo_blue_dark"
                custom:activeTextColor="@android:color/white"
                custom:cornerRadius="8dp"
                custom:inactiveBgColor="#eaeaea"
                custom:inactiveTextColor="@android:color/black"
                custom:separatorColor="@color/gray_very_light"
                custom:textToggleLeft="@string/f_ts"
                custom:textToggleRight="@string/f_t"
                custom:toggleWidth="150dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <belka.us.androidtoggleswitch.widgets.ToggleSwitch
                android:id="@+id/level_year_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                custom:activeBgColor="@android:color/holo_blue_dark"
                custom:activeTextColor="@android:color/white"
                custom:cornerRadius="8dp"
                custom:inactiveBgColor="#eaeaea"
                custom:inactiveTextColor="@android:color/black"
                custom:separatorColor="@color/gray_very_light"
                custom:textToggleLeft="@string/prem_anne"
                custom:textToggleRight="@string/deux_anne"
                custom:toggleWidth="150dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/linearLayout2"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignRight="@id/linearLayout2"
            android:layout_alignStart="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout2"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/secteur_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/slct_secteur"
                android:textSize="20sp"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_background_color="#eaeaea" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/filiere_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/slct_filiere"
                android:textSize="20sp"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_background_color="#eaeaea" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/groupes_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/slct_groupes"
                android:textSize="20sp"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_background_color="#eaeaea" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/profs_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/slct_prof_name"
                android:textSize="20sp"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_background_color="#eaeaea" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/linearLayout3"
            android:layout_alignLeft="@+id/linearLayout3"
            android:layout_alignRight="@id/linearLayout3"
            android:layout_alignStart="@+id/linearLayout3"
            android:layout_below="@+id/linearLayout3"
            android:orientation="vertical">

            <com.appyvet.materialrangebar.RangeBar
                android:id="@+id/hours_seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinTextColor="#ffffff"
                app:mrb_rangeBarColor="@color/colorPrimary"
                app:mrb_selectorBoundaryColor="#ff0000"
                app:mrb_selectorBoundarySize="1dp"
                app:mrb_selectorSize="15dp"
                app:mrb_tickColor="@color/colorPrimary"
                app:mrb_tickEnd="13"
                app:mrb_tickInterval="1"
                app:mrb_tickStart="8" />

            <TextView
                android:id="@+id/timeStartIndicatorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="8"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeEndIndicatorTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingRight="2dp"
                android:text="13"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/enterBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_alignLeft="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignStart="@+id/linearLayout2"
            android:layout_below="@+id/linearLayout4"
            android:layout_marginTop="20dp"
            android:text="@string/enter_filtrage"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/school_timedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/enterBtn"
            android:layout_alignLeft="@+id/enterBtn"
            android:layout_alignRight="@+id/enterBtn"
            android:layout_alignStart="@+id/enterBtn"
            android:layout_below="@+id/enterBtn"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/errorColor"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
